Added change and reset password apis for users and user api validations
